--- a/src/assets/styles/AboutArea.css
+++ b/src/assets/styles/AboutArea.css
@@ -13,7 +13,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('../imgs/AboutArea/bginner.jpg');
+  /* background: url('../imgs/AboutArea/bginner.jpg'); */
+  background-color: white;
   background-size: cover;
   background-position: center;
   z-index: -1;
@@ -100,6 +101,7 @@
 
 .AboutAreaCOntainer .img-div {
   overflow: hidden;
+  object-fit: contain;
 }
 
 .AboutAreaCOntainer img:hover {
