--- a/src/CountryDetails/CountryDetails.css
+++ b/src/CountryDetails/CountryDetails.css
@@ -100,7 +100,7 @@
     background: var(--primary-surface);
     padding: 20px;
     border-radius: 10px;
-    width: 450px;
+    width: 100%;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
     margin-top: 50px;
@@ -660,6 +660,10 @@
     .country-details-section .approval-card {
         width: 100%;
         height: 350px;
+    }
+
+    .Country-container-section{
+        max-width: 300px;
     }
 }
 
