--- a/src/assets/styles/Opportunity.css
+++ b/src/assets/styles/Opportunity.css
@@ -390,7 +390,7 @@
     }
 }
 
-
+/* 
 
 .form-container {
     background: #ffffff;
@@ -441,7 +441,6 @@
     width: 100%;
     height: 40px;
     padding: 0px 12px;
-    /* border: 2px solid #d3d3d3; */
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.275);
     border-radius: 6px;
     font-size: 16px;
@@ -496,7 +495,6 @@
     background: #871216;
 }
 
-/* Responsive for smaller screens */
 @media (max-width: 600px) {
     .form-container .form-row {
         flex-direction: column;
@@ -505,4 +503,4 @@
     .form-container .form-group {
         flex: 1 1 100%;
     }
-}
+} */
